--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,6 +8,6 @@
 
     <style name="AppTheme.ActionBar.Transparent" parent="AppTheme">
         <item name="colorPrimary">@android:color/transparent</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@color/login_form_details_dark</item>
     </style>
 </resources>
