--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,6 @@
     <color name="radio_btn_color">#3399ff</color>
     <color name="warning_color">#f00</color>
 
+    <color name="transparent">@null</color>
 
 </resources>
