--- a/app/src/main/res/layout/activity_heart_rate_history.xml
+++ b/app/src/main/res/layout/activity_heart_rate_history.xml
@@ -5,9 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AirHistoryActivity"
     android:background="@drawable/table_border"
-    >
+    tools:context=".AirHistoryActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -108,7 +107,7 @@
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button2"
             app:srcCompat="@drawable/charts" />
@@ -122,10 +121,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.7"
-        android:gravity="center_vertical"
-
+        android:layout_margin="5dp"
         android:shrinkColumns="*"
         android:stretchColumns="*"
+        android:gravity="center_vertical"
+
+        android:background="@drawable/table_border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -139,58 +140,27 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="DATE"
                 android:textAlignment="center"
+                android:background="@drawable/table_border"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="PM"
+                android:text="HR"
                 android:textAlignment="center"
+                android:background="@drawable/table_border"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="CO"
+                android:text="RR"
                 android:textAlignment="center"
+                android:background="@drawable/table_border"
                 android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="CO2"
-                android:textAlignment="center"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="SO2"
-                android:textAlignment="center"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="NO2"
-                android:textAlignment="center"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="O3"
-                android:textAlignment="center"
-                android:textStyle="bold" />
         </TableRow>
 
         <TableRow>
@@ -198,312 +168,165 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="01/28/2019"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="68"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="60"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:background="@drawable/table_border"
-                android:text="15"
-                android:textAlignment="center" />
+                />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:background="@drawable/table_border"
-                android:text="26"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="38"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="37"
-                android:textAlignment="center" />
         </TableRow>
-
         <TableRow>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="01/27/2019"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="36"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="15"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:background="@drawable/table_border"
-                android:text="25"
-                android:textAlignment="center" />
+                />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="63"
-                android:textAlignment="center" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="49"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="58"
-                android:textAlignment="center" />
         </TableRow>
-
         <TableRow>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="01/26/2019"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="47"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="36"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:background="@drawable/table_border"
-                android:text="26"
-                android:textAlignment="center" />
+                />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="24"
-                android:textAlignment="center" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="49"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="38"
-                android:textAlignment="center" />
         </TableRow>
-
         <TableRow>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="01/25/2019"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="48"
-                android:textAlignment="center" />
-
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="48"
+                android:textAlignment="center"
                 android:background="@drawable/table_border"
-                android:text="36"
-                android:textAlignment="center" />
+                />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="14"
-                android:textAlignment="center" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="36"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="99"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="58"
-                android:textAlignment="center" />
         </TableRow>
-
         <TableRow>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="01/24/2019"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="23"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="25"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:background="@drawable/table_border"
-                android:text="84"
-                android:textAlignment="center" />
+                />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="58"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="79"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="23"
-                android:textAlignment="center" />
+                />
         </TableRow>
-
         <TableRow>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="01/23/2019"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="66"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:background="@drawable/table_border"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
                 android:text="33"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:background="@drawable/table_border"
-                android:text="22"
-                android:textAlignment="center" />
+                />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="12"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="25"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/table_border"
-                android:text="44"
-                android:textAlignment="center" />
         </TableRow>
     </TableLayout>
 
@@ -511,29 +334,20 @@
     <!--<android.support.constraint.ConstraintLayout-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="0dp"-->
-        <!--android:layout_weight="1"-->
-        <!--android:padding="2dp"-->
-        <!--android:background="@drawable/table_border"-->
-        <!--&gt;-->
+        <!--android:layout_weight="1">-->
 
         <!--<ImageView-->
             <!--android:id="@+id/map"-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="0dp"-->
-            <!--android:padding="2dp"-->
             <!--android:layout_weight="1"-->
             <!--android:scaleType="fitXY"-->
-            <!--app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toTopOf="parent"-->
             <!--app:srcCompat="@drawable/googlemap" />-->
 
         <!--<ImageView-->
             <!--android:id="@+id/placeholder"-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_height="wrap_content"-->
-
             <!--android:layout_marginStart="8dp"-->
             <!--android:layout_marginLeft="8dp"-->
             <!--android:layout_marginTop="8dp"-->
@@ -546,6 +360,7 @@
             <!--app:layout_constraintTop_toTopOf="parent"-->
             <!--app:srcCompat="@drawable/placeholder" />-->
     <!--</android.support.constraint.ConstraintLayout>-->
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -554,4 +369,6 @@
         >
 
     </android.support.constraint.ConstraintLayout>
+
+
 </LinearLayout>
