--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,5 +9,8 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="guideline_gap">32dp</dimen>
+    <dimen name="heart_textsize">20dp</dimen>
+    <dimen name="home_airdata_textsize">25dp</dimen>
 
 </resources>
