--- a/app/src/main/res/layout/activity_heart_rate_history.xml
+++ b/app/src/main/res/layout/activity_heart_rate_history.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/table_border"
+    android:background="@drawable/layout_block_border"
     tools:context=".AirHistoryActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@drawable/table_border"
         android:layout_weight="1">
 
         <ImageView
@@ -103,7 +102,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="4dp"
-            android:background="@drawable/table_border"
+            android:background="@drawable/layout_block_border"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -121,12 +120,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.7"
-        android:layout_margin="5dp"
         android:shrinkColumns="*"
         android:stretchColumns="*"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:gravity="center_vertical"
-
-        android:background="@drawable/table_border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -364,10 +364,8 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@drawable/table_border"
+        android:layout_weight="0.9"
         >
-
     </android.support.constraint.ConstraintLayout>
 
 
