--- a/app/src/main/res/layout/activity_air_history.xml
+++ b/app/src/main/res/layout/activity_air_history.xml
@@ -6,13 +6,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".AirHistoryActivity"
-    android:background="@drawable/table_border"
+    android:background="@drawable/layout_block_border"
     >
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@drawable/table_border"
         android:layout_weight="1">
 
         <ImageView
@@ -104,7 +103,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="4dp"
-            android:background="@drawable/table_border"
+            android:background="@drawable/layout_block_border"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +122,10 @@
         android:layout_height="0dp"
         android:layout_weight="0.7"
         android:gravity="center_vertical"
-
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:shrinkColumns="*"
         android:stretchColumns="*"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -513,7 +515,7 @@
         <!--android:layout_height="0dp"-->
         <!--android:layout_weight="1"-->
         <!--android:padding="2dp"-->
-        <!--android:background="@drawable/table_border"-->
+        <!--android:background="@drawable/layout_block_border"-->
         <!--&gt;-->
 
         <!--<ImageView-->
@@ -549,8 +551,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@drawable/table_border"
+        android:layout_weight="0.9"
         >
 
     </android.support.constraint.ConstraintLayout>
