--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -7,7 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".HomeActivity"
     android:orientation="vertical"
-
+    android:background="@drawable/layout_block_border"
     tools:showIn="@layout/app_bar_home">
 
 
@@ -15,12 +15,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1.2"
-        android:background="@drawable/table_border"
+        android:background="@drawable/layout_block_border"
         android:orientation="horizontal">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/layout_block_border"
             android:layout_weight="2">
 
             <TextView
@@ -108,7 +109,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/table_border"
+            android:background="@drawable/layout_block_border"
             android:layout_weight="1">
 
             <ImageView
@@ -136,6 +137,7 @@
                 android:layout_marginRight="8dp"
                 android:text="Recommand"
                 android:textSize="15dp"
+                android:textColor="@color/login_form_details_dark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -153,6 +155,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="Thin Cloth"
                 android:textSize="20dp"
+                android:textColor="@color/login_form_details_dark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.429"
@@ -166,8 +169,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1.2"
-        android:background="@drawable/table_border"
-        android:padding="2dp"
         >
 
         <ImageView
@@ -202,7 +203,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1.4"
-        android:background="@drawable/table_border"
+        android:background="@drawable/layout_block_border"
         >
 
         <ImageButton
@@ -231,6 +232,7 @@
             android:layout_marginRight="8dp"
             android:text="HR : 109"
             android:textSize="@dimen/heart_textsize"
+            android:textColor="@color/login_form_details_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/heart_btn"
@@ -246,6 +248,7 @@
             android:layout_marginRight="8dp"
             android:text="RR : 88.11"
             android:textSize="@dimen/heart_textsize"
+            android:textColor="@color/login_form_details_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -258,7 +261,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@drawable/table_border"
+        android:background="@drawable/layout_block_border"
         >
 
         <LinearLayout
@@ -272,7 +275,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"
+                android:background="@drawable/layout_block_border"
                 android:orientation="vertical">
 
                 <Button
@@ -317,7 +320,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"
+                android:background="@drawable/layout_block_border"
                 android:orientation="vertical">
 
                 <Button
@@ -358,7 +361,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"
+                android:background="@drawable/layout_block_border"
                 android:orientation="vertical">
 
                 <Button
@@ -406,7 +409,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"
+                android:background="@drawable/layout_block_border"
                 android:orientation="vertical">
 
                 <Button
@@ -448,7 +451,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"
+                android:background="@drawable/layout_block_border"
                 android:orientation="vertical">
 
                 <Button
@@ -489,7 +492,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"
+                android:background="@drawable/layout_block_border"
                 android:orientation="vertical">
 
                 <Button
