--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -25,10 +25,10 @@
         android:id="@+id/email_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:text="E-mail : "
         android:textColor="@color/login_form_details_dark"
-        android:textStyle="bold"
+        android:fontFamily="@font/bold_font"
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -42,6 +42,7 @@
         android:background="@drawable/et_bg"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
+        android:fontFamily="@font/normal_font"
         app:layout_constraintEnd_toStartOf="@+id/check_btn"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -71,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/bold_font"
         android:visibility="gone"
         android:text="Check text"
         android:textColor="@color/login_form_details_dark"
@@ -87,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Password : "
-        android:textStyle="bold"
+        android:fontFamily="@font/bold_font"
         android:textColor="@color/login_form_details_dark"
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
@@ -102,6 +103,7 @@
         android:background="@drawable/et_bg"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
+        android:fontFamily="@font/normal_font"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
@@ -112,8 +114,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="First_name : "
-        android:textStyle="bold"
+        android:text="First name : "
+        android:fontFamily="@font/bold_font"
         android:textColor="@color/login_form_details_dark"
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
@@ -126,6 +128,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/et_bg"
+        android:fontFamily="@font/normal_font"
         android:inputType="text"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
@@ -137,8 +140,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Last_name : "
-        android:textStyle="bold"
+        android:text="Last name : "
+        android:fontFamily="@font/bold_font"
         android:textColor="@color/login_form_details_dark"
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
@@ -153,6 +156,7 @@
         android:background="@drawable/et_bg"
         android:paddingLeft="10dp"
         android:inputType="text"
+        android:fontFamily="@font/normal_font"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
         app:layout_constraintTop_toBottomOf="@+id/last_name_text" />
@@ -162,7 +166,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/bold_font"
         android:text="Sex : "
         android:textColor="@color/login_form_details_dark"
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
@@ -186,6 +190,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:buttonTint="@color/radio_btn_color"
+            android:fontFamily="@font/normal_font"
             app:layout_constraintStart_toStartOf="@id/guideline_left"
             android:text="Man" />
 
@@ -195,6 +200,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toStartOf="@id/guideline_right"
             android:layout_weight="1"
+            android:fontFamily="@font/normal_font"
             android:buttonTint="@color/radio_btn_color"
             android:text="Woman" />
     </RadioGroup>
@@ -212,6 +218,7 @@
         android:text="Sign up"
         android:textAllCaps="false"
         android:textColor="@color/login_form_details"
+        android:fontFamily="@font/normal_font"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
