--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -36,6 +36,8 @@
                 android:layout_marginBottom="8dp"
                 android:text="59 ℉"
                 android:textSize="25dp"
+                android:fontFamily="@font/bold_font"
+                android:textColor="@color/temp_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.586"
@@ -136,8 +138,9 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:text="Recommand"
-                android:textSize="15dp"
+                android:fontFamily="@font/normal_font"
                 android:textColor="@color/login_form_details_dark"
+                android:textSize="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -146,22 +149,23 @@
             <TextView
                 android:id="@+id/textView15"
                 android:layout_width="wrap_content"
-                android:layout_height="26dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/bold_font"
                 android:text="Thin Cloth"
-                android:textSize="20dp"
                 android:textColor="@color/login_form_details_dark"
+                android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.429"
+                app:layout_constraintHorizontal_bias="0.427"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView3"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintVertical_bias="0.727" />
         </android.support.constraint.ConstraintLayout>
     </LinearLayout>
 
@@ -227,12 +231,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="HR : 109"
-            android:textSize="@dimen/heart_textsize"
             android:textColor="@color/login_form_details_dark"
+            android:textSize="@dimen/heart_textsize"
+            app:fontFamily="@font/bold_font"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/heart_btn"
@@ -246,9 +251,11 @@
             android:layout_marginLeft="20dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginBottom="2dp"
             android:text="RR : 88.11"
-            android:textSize="@dimen/heart_textsize"
             android:textColor="@color/login_form_details_dark"
+            android:textSize="@dimen/heart_textsize"
+            app:fontFamily="@font/bold_font"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -295,6 +302,7 @@
                     android:text="PM : 88"
                     android:textAlignment="center"
                     android:textSize="@dimen/home_airdata_textsize"
+                    android:fontFamily="@font/normal_font"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -338,6 +346,7 @@
                     android:text="CO : 77"
                     android:textAlignment="center"
                     android:textSize="@dimen/home_airdata_textsize"
+                    android:fontFamily="@font/normal_font"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -375,8 +384,9 @@
                     android:layout_marginRight="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@null"
+                    android:fontFamily="@font/normal_font"
                     android:onClick="onClick"
-                    android:text="CO2 : 25"
+                    android:text="CO₂ : 25"
                     android:textAlignment="center"
                     android:textSize="@dimen/home_airdata_textsize"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -423,8 +433,9 @@
                     android:layout_marginRight="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@null"
+                    android:fontFamily="@font/normal_font"
                     android:onClick="onClick"
-                    android:text="SO2 : 50"
+                    android:text="SO₂ : 50"
                     android:textAlignment="center"
                     android:textSize="@dimen/home_airdata_textsize"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -465,8 +476,9 @@
                     android:layout_marginRight="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@null"
+                    android:fontFamily="@font/normal_font"
                     android:onClick="onClick"
-                    android:text="NO2 : 11"
+                    android:text="NO₂ : 11"
                     android:textAlignment="center"
                     android:textSize="@dimen/home_airdata_textsize"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -506,8 +518,9 @@
                     android:layout_marginRight="16dp"
                     android:layout_marginBottom="8dp"
                     android:background="@null"
+                    android:fontFamily="@font/normal_font"
                     android:onClick="onClick"
-                    android:text="O3 : 25"
+                    android:text="O₃ : 25"
                     android:textAlignment="center"
                     android:textSize="@dimen/home_airdata_textsize"
                     app:layout_constraintBottom_toBottomOf="parent"
