--- a/app/src/main/res/layout/actionbar_title.xml
+++ b/app/src/main/res/layout/actionbar_title.xml
@@ -11,5 +11,6 @@
         android:text="title"
         android:textColor="#000"
         android:id="@+id/mytext"
+        android:fontFamily="@font/normal_font"
         android:textSize="20dp" />
 </LinearLayout>
