--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -26,13 +26,13 @@
         android:id="@+id/email_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="40dp"
         android:text="E-mail : "
         android:textColor="@color/login_form_details_dark"
+        android:fontFamily="@font/bold_font"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
-        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -45,6 +45,8 @@
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
+        android:paddingLeft="10dp"
+        android:fontFamily="@font/normal_font"
         app:layout_constraintTop_toBottomOf="@+id/email_text" />
 
     <Button
@@ -59,6 +61,7 @@
         android:background="@drawable/bg_login"
         android:text="Send E-mail"
         android:textAllCaps="false"
+        android:fontFamily="@font/normal_font"
         android:textColor="@color/login_form_details"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
