--- a/app/src/main/res/layout/activity_heart_rate_history.xml
+++ b/app/src/main/res/layout/activity_heart_rate_history.xml
@@ -11,14 +11,14 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="0.7">
 
         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="156dp"
-            android:layout_marginLeft="156dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginLeft="150dp"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -31,8 +31,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/normal_font"
             android:text="End"
+            android:textColor="@color/login_form_details_dark"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,6 +45,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:text="01/30/2019"
+            android:fontFamily="@font/normal_font"
+            android:textColor="@color/login_form_details_dark"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -63,8 +67,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/normal_font"
             android:text="Start"
+            android:textColor="@color/login_form_details_dark"
             app:layout_constraintStart_toEndOf="@+id/imageView7"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,6 +81,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:text="01/28/2019"
+            android:textColor="@color/login_form_details_dark"
+            android:fontFamily="@font/normal_font"
             app:layout_constraintStart_toEndOf="@+id/imageView7"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -87,7 +95,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:background="@drawable/air_history_show_btn"
+            android:fontFamily="@font/normal_font"
             android:text="Show"
+            android:textColor="@color/login_form_details"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView3"
             app:layout_constraintTop_toTopOf="parent" />
@@ -126,6 +137,7 @@
         android:paddingRight="8dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
+        android:layout_marginTop="4dp"
         android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -143,7 +155,9 @@
                 android:text="DATE"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
-                android:textStyle="bold" />
+                android:fontFamily="@font/bold_font"
+                android:textColor="@color/login_form_details_dark"
+                 />
 
             <TextView
                 android:layout_width="match_parent"
@@ -151,7 +165,9 @@
                 android:text="HR"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
-                android:textStyle="bold" />
+                android:fontFamily="@font/bold_font"
+                android:textColor="@color/login_form_details_dark"
+                />
 
             <TextView
                 android:layout_width="match_parent"
@@ -159,7 +175,9 @@
                 android:text="RR"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
-                android:textStyle="bold" />
+                android:fontFamily="@font/bold_font"
+                android:textColor="@color/login_form_details_dark"
+                />
 
         </TableRow>
 
@@ -171,6 +189,8 @@
                 android:text="01/28/2019"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
             <TextView
@@ -179,6 +199,8 @@
                 android:text="68"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
             <TextView
@@ -187,6 +209,8 @@
                 android:text="60"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
         </TableRow>
@@ -198,6 +222,8 @@
                 android:text="01/27/2019"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
             <TextView
@@ -206,6 +232,8 @@
                 android:text="36"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
             <TextView
@@ -214,6 +242,8 @@
                 android:text="15"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
 
@@ -226,6 +256,8 @@
                 android:text="01/26/2019"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
             <TextView
@@ -234,6 +266,8 @@
                 android:text="47"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
             <TextView
@@ -242,6 +276,8 @@
                 android:text="36"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
 
@@ -254,6 +290,8 @@
                 android:text="01/25/2019"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
             <TextView
@@ -262,6 +300,8 @@
                 android:text="48"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -269,6 +309,8 @@
                 android:text="48"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
 
@@ -281,6 +323,8 @@
                 android:text="01/24/2019"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
             <TextView
@@ -289,6 +333,8 @@
                 android:text="23"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
             <TextView
@@ -297,6 +343,8 @@
                 android:text="25"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
                 />
@@ -309,6 +357,8 @@
                 android:text="01/23/2019"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
             <TextView
@@ -317,6 +367,8 @@
                 android:text="66"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
             <TextView
@@ -325,6 +377,8 @@
                 android:text="33"
                 android:textAlignment="center"
                 android:background="@drawable/table_border"
+                android:fontFamily="@font/normal_font"
+                android:textColor="@color/login_form_details_dark"
                 />
 
         </TableRow>
@@ -364,7 +418,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.9"
+        android:layout_weight="0.5"
         >
     </android.support.constraint.ConstraintLayout>
 
