--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/logo_3"
+        android:layout_marginTop="70dp"
+        android:src="@drawable/logo"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,6 +45,7 @@
         android:hint="E-mail address"
         android:textColorHint="@color/login_form_details_gray"
         android:drawableLeft="@drawable/profile"
+        app:fontFamily="@font/sarabun_bold"
         android:drawablePadding="10dp"
         android:padding="16dp"
         />
@@ -61,6 +62,7 @@
         android:background="@drawable/et_bg"
         android:hint="Password"
         android:drawableLeft="@drawable/lock"
+        app:fontFamily="@font/sarabun_bold"
         android:drawablePadding="10dp"
         android:textColorHint="@color/login_form_details_gray"
         android:padding="16dp"
@@ -77,6 +79,7 @@
         android:layout_marginRight="8dp"
         android:background="@drawable/bg_login"
         android:text="Sign in"
+        app:fontFamily="@font/sarabun_bold"
         android:textAllCaps="false"
         android:textColor="@color/login_form_details"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
@@ -92,6 +95,7 @@
         android:onClick="onClick"
         android:text="Sign up Now!"
         android:textColor="@color/login_form_details_dark"
+        app:fontFamily="@font/sarabun_medium"
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
@@ -110,14 +114,14 @@
         android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot password? Click"
+        android:layout_marginTop="8dp"
         android:onClick="onClick"
+        android:text="Forgot password?"
         android:textColor="@color/login_form_details_dark"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:fontFamily="@font/sarabun_medium"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
-        app:layout_constraintTop_toBottomOf="@id/footer_line"
-        android:layout_marginTop="10dp"
-        />
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@id/footer_line" />
 
 
 
