--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,6 @@
     <dimen name="guideline_gap">32dp</dimen>
     <dimen name="heart_textsize">20dp</dimen>
     <dimen name="home_airdata_textsize">25dp</dimen>
+    <dimen name="home_circle_textsize">17dp</dimen>
 
 </resources>
