--- a/app/src/main/res/drawable/splash_color.xml
+++ b/app/src/main/res/drawable/splash_color.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#86A8E7"
-        android:endColor="#91EAE4"
+        android:startColor="#91EAE4"
+        android:endColor="#86A8E7"
         android:angle="135"/>
 
 </shape>
