--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="login_form_details_gray">#D3D3D3</color>
 
 
-    <color name="radio_btn_color">#3399ff</color>
+    <color name="radio_btn_color">#003366</color>
     <color name="warning_color">#f00</color>
     <color name="temp_color">#f00</color>
 
