--- a/app/src/main/res/layout/activity_change_now_pwd.xml
+++ b/app/src/main/res/layout/activity_change_now_pwd.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline_left"
@@ -42,7 +42,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/et_bg"
         android:inputType="textPassword"
-        android:textAlignment="center"
+        android:paddingLeft="@dimen/edittext_left_padding"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
@@ -68,7 +68,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/et_bg"
         android:inputType="textPassword"
-        android:textAlignment="center"
+        android:paddingLeft="@dimen/edittext_left_padding"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
@@ -94,6 +94,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/et_bg"
         android:inputType="textPassword"
+        android:paddingLeft="@dimen/edittext_left_padding"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
         app:layout_constraintTop_toBottomOf="@+id/password_confirm_text" />
