--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline_left"
@@ -45,7 +45,7 @@
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
-        android:paddingLeft="10dp"
+        android:paddingLeft="@dimen/edittext_left_padding"
         android:fontFamily="@font/normal_font"
         app:layout_constraintTop_toBottomOf="@+id/email_text" />
 
