--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline_left"
@@ -25,7 +25,7 @@
         android:id="@+id/email_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/bold_font"
         android:text="E-mail : "
         android:textColor="@color/login_form_details_dark"
@@ -41,7 +41,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/et_bg"
         android:inputType="textEmailAddress"
-        android:paddingLeft="10dp"
+        android:paddingLeft="@dimen/edittext_left_padding"
         android:fontFamily="@font/normal_font"
         app:layout_constraintEnd_toStartOf="@+id/check_btn"
         app:layout_constraintHorizontal_bias="0.0"
@@ -86,9 +86,9 @@
         android:id="@+id/password_confirm_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Password : "
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/bold_font"
+        android:text="Password : "
         android:textColor="@color/login_form_details_dark"
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
@@ -102,7 +102,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/et_bg"
         android:inputType="textPassword"
-        android:paddingLeft="10dp"
+        android:paddingLeft="@dimen/edittext_left_padding"
         android:fontFamily="@font/normal_font"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
@@ -113,7 +113,7 @@
         android:id="@+id/password_confirm_text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/bold_font"
         android:text="Password Confirm : "
         android:textColor="@color/login_form_details_dark"
@@ -129,7 +129,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/et_bg"
         android:inputType="textPassword"
-        android:paddingLeft="10dp"
+        android:paddingLeft="@dimen/edittext_left_padding"
         android:fontFamily="@font/normal_font"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
@@ -141,9 +141,9 @@
         android:id="@+id/first_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="First name : "
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/bold_font"
+        android:text="First name : "
         android:textColor="@color/login_form_details_dark"
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
@@ -158,7 +158,7 @@
         android:background="@drawable/et_bg"
         android:fontFamily="@font/normal_font"
         android:inputType="text"
-        android:paddingLeft="10dp"
+        android:paddingLeft="@dimen/edittext_left_padding"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
         app:layout_constraintTop_toBottomOf="@+id/first_name_text" />
@@ -167,9 +167,9 @@
         android:id="@+id/last_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Last name : "
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/bold_font"
+        android:text="Last name : "
         android:textColor="@color/login_form_details_dark"
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
@@ -182,7 +182,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/et_bg"
-        android:paddingLeft="10dp"
+        android:paddingLeft="@dimen/edittext_left_padding"
         android:inputType="text"
         android:fontFamily="@font/normal_font"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
@@ -193,7 +193,7 @@
         android:id="@+id/sex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/bold_font"
         android:text="Sex : "
         android:textColor="@color/login_form_details_dark"
@@ -206,11 +206,10 @@
         android:id="@+id/radio_sex"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toStartOf="@id/guideline_right"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintTop_toBottomOf="@+id/sex" >
+        app:layout_constraintTop_toBottomOf="@+id/sex">
 
         <RadioButton
             android:id="@+id/radioButton9"
@@ -219,18 +218,18 @@
             android:layout_weight="1"
             android:buttonTint="@color/radio_btn_color"
             android:fontFamily="@font/normal_font"
-            app:layout_constraintStart_toStartOf="@id/guideline_left"
-            android:text="Man" />
+            android:text="Man"
+            app:layout_constraintStart_toStartOf="@id/guideline_left" />
 
         <RadioButton
             android:id="@+id/radioButton7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@id/guideline_right"
             android:layout_weight="1"
-            android:fontFamily="@font/normal_font"
             android:buttonTint="@color/radio_btn_color"
-            android:text="Woman" />
+            android:fontFamily="@font/normal_font"
+            android:text="Woman"
+            app:layout_constraintEnd_toStartOf="@id/guideline_right" />
     </RadioGroup>
 
     <Button
@@ -239,14 +238,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="20dp"
         android:background="@drawable/bg_login"
+        android:fontFamily="@font/normal_font"
         android:text="Sign up"
         android:textAllCaps="false"
         android:textColor="@color/login_form_details"
-        android:fontFamily="@font/normal_font"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
