--- a/app/src/main/res/layout/actionbar_title.xml
+++ b/app/src/main/res/layout/actionbar_title.xml
@@ -2,18 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="horizontal"
+    >
+
+
+    <ImageButton
+        android:id="@+id/backbtn"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@color/transparent"
+        android:layout_gravity="center"
+        android:paddingRight="30dp"
+        app:srcCompat="@drawable/back" />
 
     <TextView
         android:id="@+id/mytext"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_weight="7"
+        android:gravity="center"
         android:fontFamily="@font/normal_font"
+        android:paddingRight="30dp"
         android:text="title"
         android:textColor="#000"
         android:textSize="20dp"
-        app:fontFamily="@font/sarabun_medium" />
+        app:fontFamily="@font/normal_font" />
 </LinearLayout>
