--- a/app/src/main/res/layout/activity_air_history.xml
+++ b/app/src/main/res/layout/activity_air_history.xml
@@ -25,7 +25,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/calendar" />
 
-
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
@@ -104,7 +103,7 @@
             app:layout_constraintStart_toEndOf="@+id/textView3"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/chart"
             android:layout_width="match_parent"
             android:layout_height="122dp"
@@ -120,8 +119,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button2"
-            app:srcCompat="@drawable/charts" />
+            app:layout_constraintTop_toBottomOf="@+id/button2" />
 
 
 
